caixa: fechamento de caixa.
